# usaco-solutions

./: .gitignore  CMakeLists.txt  README.md
Contest/Feb 2024/: MaximizingProductivity.cpp  MilkExchange.cpp  PalindromeGame.cpp
Practice/: CandyCaneFeast.cpp
