cmake_minimum_required(VERSION 3.28)
project(usaco_solutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(usaco_solutions
        Practice/CandyCaneFeast.cpp
        "Contest/Feb 2024/MaximizingProductivity.cpp"
        "Contest/Feb 2024/MaximizingProductivity.cpp"
        "Contest/Feb 2024/MilkExchange.cpp"
        "Contest/Feb 2024/PalindromeGame.cpp")
